# squirrel-lsp

./: .gitmodules  CMakeLists.txt
src/: languageserver.cpp  languageserver.h  languageservermodule.cpp  languageservermodule.h  logger.cpp  logger.h  main.cpp  semantichighlighting.cpp  semantichighlighting.h  semantictokens.cpp  semantictokens.h  singleton.h  squirrelenv.cpp  squirrelenv.h  squirrelreader.cpp  squirrelreader.h  stdinreader.cpp  stdinreader.h  syncmodule.cpp  syncmodule.h
tests/: regex.json  test.lua  test.nut
